# wayback2warc

./: LICENSE  README.md  pyproject.toml  wayback2warc.py
.github/workflows/: publish.yml
